# Targeted-fine-tuning-with-Evolution-Algorithm

./: .gitignore  LAPE.py  MathNeuro.py  MathNeuro_Ablations.py  README.md  mathneuro_config.py  pyproject.toml  requirements.txt  run.py
configs/: default_mathneuro.yaml  mathneuro_gsm8k.yaml  mathneuro_gsm8k_modeBoth.yaml
experiments/distillation/: __init__.py  analyze_rescue.py  archive.py  datasets.py  eval_held_out.py  mining.py  plots.py  rescue_stats.py  train_lora.py
experiments/overlap/: __init__.py  analyze.py  coverage.py  family.py  intervention_configs.py  io.py  metrics.py  plots.py  run_pool.py  runner.py  synergy.py
lm_eval/api/: task.py
mathneuro/: __init__.py  config.py  core.py  ea_search.py
